# tracker-hs

./: Procfile  README.md  tracker-hs.cabal
app/: Database.hs  Main.hs  Routes.hs
app/Views/: Index.hs  Layout.hs
app/views/: Index.hs  Layout.hs
web/: .gitignore  elm-package.json  package.json  webpack.config.js
web/src/: Main.elm  index.js
